--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "a type safe library to communicate to the websocket built with elixir phoenix.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "publish": "npm publish --access=public"
   },
   "repository": {
     "type": "git",
