--- a/package.json
+++ b/package.json
@@ -1,12 +1,9 @@
 {
   "name": "phx-socket",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "a type safe library to communicate to the websocket built with elixir phoenix.",
   "main": "dist/index.js",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/saisumith770/phx-socket"
-  },
+  "repository": "https://github.com/saisumith770/phx-socket",
   "keywords": [
     "phoenix",
     "elixir",
@@ -17,5 +14,15 @@
   "bugs": {
     "url": "https://github.com/saisumith770/phx-socket/issues"
   },
-  "homepage": "https://github.com/saisumith770/phx-socket/blob/master/README.md"
+  "homepage": "https://github.com/saisumith770/phx-socket/blob/master/README.md",
+  "private": false,
+  "devDependencies": {
+    "@types/jest": "^27.4.0",
+    "jest": "^27.4.7",
+    "ts-jest": "^27.1.2",
+    "typescript": "^4.5.4"
+  },
+  "scripts": {
+    "test": "jest"
+  }
 }
